# osm-renderer

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  todo.txt
.github/workflows/: ci.yml
benches/: tile_pixels_benchmark.rs
browser_test/: index.html  index_moscow.html  leaflet.js
mapcss/: osmosnimki-minimal.mapcss
schema/: geodata.capnp
src/: coords.rs  drawer.rs  geodata_capnp.rs  http_server.rs  lib.rs  perf_stats.rs  tile.rs
src/draw/: cairo_drawer.rs  drawer.rs  figure.rs  fill.rs  icon.rs  icon_cache.rs  labelable.rs  labeler.rs  line.rs  mod.rs  node_pairs.rs  opacity_calculator.rs  opacity_trackers.rs  png_image.rs  png_writer.rs  point.rs  point_pairs.rs  pure_rust_drawer.rs  tile_pixels.rs  with_center.rs
src/draw/font/: mod.rs  rasterizer.rs  text_placer.rs
src/drawer/: cairo_drawer.rs  drawn_pixels.rs  figure.rs  line.rs  mod.rs  png_image.rs  point.rs  pure_rust_drawer.rs
src/geodata/: find_polygons.rs  importer.rs  mod.rs  multipolygons.rs  reader.rs  saver.rs
src/mapcss/: ast.rs  color.rs  grammar.lalrpop  mod.rs  parser.rs  selector.rs  style.rs  style_cache.rs  styler.rs  token.rs
src/perf_stats/: dummy_impl.rs  mod.rs  perf_stats.html  real_impl.rs
tests/: common.rs  nano_moscow.osm  prepare_test_data.py  test_data.json  test_geodata_reader.rs  test_mapcss_parser.rs  test_mapcss_styler.rs  test_rendering.rs
tests/common/: mod.rs
tests/mapcss/: mapnik.mapcss  mapnik.parsed.canonical
tests/osm/: prepare_test_data.py
tests/rendered/: canonize.py
