[package]
name = "renderer"
version = "1.0.0"
authors = ["Ivan Komarov <Ivan.Komarov@dfyz.info>"]
edition = "2018"
license = "MIT"

[dependencies]
anyhow = "*"
byteorder = "*"
indexmap = "*"
memmap = "*"
owning_ref = "*"
png = "*"
stb_truetype = "*"
tini = "*"
xml-rs = "*"

[dependencies.osmpbf]
version = "*"
optional = true

[features]
perf-stats = []
pbf = ["osmpbf"]

# So that we have line numbers in backtraces with RUST_BACKTRACE=1.
[profile.release]
debug = true
