[package]
name = "renderer"
version = "1.0.0"
authors = ["Ivan Komarov <Ivan.Komarov@dfyz.info>"]
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1.0.95"
byteorder = "1.5.0"
indexmap = "2.7.0"
memmap2 = "0.9.5"
png = "0.17.16"
quick-xml = "0.37.1"
stb_truetype = "0.3.1"
tini = "1.3.0"

[dependencies.osmpbf]
version = "0.3.4"
optional = true

[features]
perf-stats = []
pbf = ["osmpbf"]

# So that we have line numbers in backtraces with RUST_BACKTRACE=1.
[profile.release]
debug = true
